deploy/kustomize/base/minerva-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minerva
  labels:
    name: minerva
