deploy/kustomize/base/minerva-dispatch.yml
---
# Minerva System -- DISPATCH: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch-deployment
  namespace: minerva
spec:
  template:
    metadata:
      name: dispatch
      labels:
        app: dispatch
    spec:
      containers:
        - name: dispatch-container
          image: luksamuk/minerva_dispatch:0.1.1
          imagePullPolicy: Always
          volumeMounts:
            - name: log-config
              mountPath: /cfg/
          resources:
            requests:
              cpu: 50m
      volumes:
        - name: log-config
          configMap:
            name: log-configmap
  replicas: 3
  selector:
    matchLabels:
      app: dispatch
