deploy/kustomize/base/minerva-rest.yml
---
# Minerva System -- REST: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-deployment
  namespace: minerva
spec:
  template:
    metadata:
      name: rest
      labels:
        app: rest
    spec:
      containers:
        - name: rest-container
          image: luksamuk/minerva_rest:0.3.2
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: log-config
              mountPath: /cfg/
          resources:
            requests:
              cpu: 50m
      volumes:
        - name: log-config
          configMap:
            name: log-configmap
  replicas: 2
  selector:
    matchLabels:
      app: rest
---
# Minerva System -- REST: Service
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
  namespace: minerva
spec:
  type: LoadBalancer
  selector:
    app: rest
  ports:
    - port: 9000
      nodePort: 30000
