deploy/kustomize/base/minerva-session.yml
---
# Minerva System -- SESSION: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-deployment
  namespace: minerva
spec:
  template:
    metadata:
      name: session
      labels:
        app: session
    spec:
      containers:
        - name: session-container
          image: luksamuk/minerva_session:0.1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9011
          volumeMounts:
            - name: log-config
              mountPath: /cfg/
          resources:
            requests:
              cpu: 100m
      volumes:
        - name: log-config
          configMap:
            name: log-configmap
  replicas: 2
  selector:
    matchLabels:
      app: session
---
# Minerva System -- SESSION: Service
apiVersion: v1
kind: Service
metadata:
  name: session-svc
  namespace: minerva
spec:
  type: ClusterIP
  selector:
    app: session
  ports:
    - port: 9011
