deploy/kustomize/base/minerva-user.yml
---
# Minerva System -- USER: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: minerva
spec:
  template:
    metadata:
      name: user
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: luksamuk/minerva_user:0.3.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9010
          volumeMounts:
            - name: log-config
              mountPath: /cfg/
          resources:
            requests:
              cpu: 150m
      volumes:
        - name: log-config
          configMap:
            name: log-configmap
  replicas: 2
  selector:
    matchLabels:
      app: user
---
# Minerva System -- USER: Service
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: minerva
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 9010
