deploy/kustomize/base/mongodb.yml
---
# MongoDB: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: minerva
spec:
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo:4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-pv
          ports:
            - containerPort: 27017
      volumes:
        - name: mongodb-pv
          persistentVolumeClaim:
            claimName: mongodb-pvc
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
---
# MongoDB: Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: minerva
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
