deploy/kustomize/base/redis.yml
---
# Redis: Stateful Set
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: minerva
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  serviceName: redis-svc
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server"]
          args: ["/etc/redis/redis.conf"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            # - name: redis-data
            #   mountPath: /data
            - name: redis-config
              mountPath: /etc/redis/
          resources:
            requests:
              memory: 50Mi
              cpu: 15m
            limits:
              memory: 100Mi
              cpu: 20m
      volumes:
        - name: redis-config
          emptyDir: {}
        - name: redis-initial-config
          configMap:
            name: redis-configmap
  # volumeClaimTemplates:
  #   - metadata:
  #       name: redis-data
  #     spec:
  #       accessModes:
  #         - ReadWriteOnce
  #       resources:
  #         requests:
  #           storage: 500Mi
---
# Redis: Service
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: minerva
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      name: redis
