deploy/kustomize/base/minerva-ingress.yml
---
# Grafana prefix middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-ingress-middleware
  namespace: minerva
spec:
  replacePathRegex:
    regex: ^/grafana/(.*)
    replacement: /$1
---
# API Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rest-svc
                port:
                  number: 9000
---
# Grafana Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: minerva-grafana-ingress-middleware@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
# PgAdmin4 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin-svc
                port:
                  number: 80
---
# Mongo Express Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /mongoexpress
            pathType: Prefix
            backend:
              service:
                name: mongoexpress-svc
                port:
                  number: 8081
---
# Kibana Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  number: 5601
